Update AddCommandTest.java